# mdbed

./: .gitignore  README.md  pyproject.toml
example/: example.py
example/data/: chatgpt_4-5_generation.md  chatgpt_o1_generation.md  claude_3-7_generation.md  source_prompt.md
src/mdbed/: __init__.py  cli.py  embedding.py  markdown.py  utils.py
